fixes-for-subscribed-to-newsletter-alignment

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -127,6 +127,16 @@
             #mix-grid .column(@field-label-grid__column, @field-grid__columns);
         }
 
+        &.field-subscription {
+            > .admin__field-label {
+                width: auto;
+                margin-left: 0;
+                span {
+                    white-space: nowrap;
+                }
+            }
+        }
+
         &:extend(.abs-field-sizes all);
 
         &.admin__field-no-label {
